(12) Redefined FNAN and FINFINITY in vol_vol_edist.c to work with MSC.


------------------------------------------------------------------------
r557 | gaser | 2014-01-27 11:12:50

M       CHANGES.txt
A       vbm_vol_genus0.mexa64
A       vbm_vol_genus0.mexglx
A       vbm_vol_genus0.mexmaci64
A       vbm_vol_genus0.mexw32
A       vbm_vol_genus0.mexw64

Added missing vbm_vol_genus0.mex* files.
------------------------------------------------------------------------
r558 | gaser | 2014-01-27 11:14:11

M       CHANGES.txt
 M      fsaverage/fsavg.index2D_256x128.txt
 M      genus0.c
 M      genus0.h
M       vbm12.man
MM      vbm_vol_genus0.c

Added missing vbm_vol_genus0.mex* files.
------------------------------------------------------------------------
r559 | gaser | 2014-01-27 11:14:40

M       CHANGES.txt
 M      vbm_vol_genus0.mexa64
 M      vbm_vol_genus0.mexglx
 M      vbm_vol_genus0.mexmaci64
 M      vbm_vol_genus0.mexw32
 M      vbm_vol_genus0.mexw64

Added missing vbm_vol_genus0.mex* files.
------------------------------------------------------------------------
r560 | gaser | 2014-01-27 11:14:53

M       CHANGES.txt
A       tricases.h
M       vbm12.man

Added missing tricases.h.
------------------------------------------------------------------------
r561 | gaser | 2014-01-27 11:16:26

M       CHANGES.txt

Removed CAT.maci64 because of difficulties to use subversion for binaries.
------------------------------------------------------------------------
r562 | gaser | 2014-01-27 11:19:00

M       CHANGES.txt
 M      tricases.h
M       vbm12.man

Removed CAT.maci64 because of difficulties to use subversion for binaries.
------------------------------------------------------------------------
r563 | gaser | 2014-01-27 11:22:42

M       CHANGES.txt
M       Makefile.vbm
M       vbm12.man

Removed cg_check_mesh_cov from Makefile.vbm.
------------------------------------------------------------------------
r564 | gaser | 2014-01-27 11:25:25