@@ -90,12 +90,19 @@ try
     matlabbatch{1}.spm.tools.vbm.write.output.GM  = rmfield(matlabbatch{1}.spm.tools.vbm.write.output.GM,'mod');
     matlabbatch{1}.spm.tools.vbm.write.output.WM  = rmfield(matlabbatch{1}.spm.tools.vbm.write.output.WM,'mod');
     matlabbatch{1}.spm.tools.vbm.write.output.CSF = rmfield(matlabbatch{1}.spm.tools.vbm.write.output.CSF,'mod');
-    matlabbatch{1}.spm.tools.vbm.write.output.mgT = rmfield(matlabbatch{1}.spm.tools.vbm.write.output.mgT,'mod');
   else
     matlabbatch{1}.spm.tools.vbm.estwrite.output.GM  = rmfield(matlabbatch{1}.spm.tools.vbm.estwrite.output.GM,'mod');
     matlabbatch{1}.spm.tools.vbm.estwrite.output.WM  = rmfield(matlabbatch{1}.spm.tools.vbm.estwrite.output.WM,'mod');
     matlabbatch{1}.spm.tools.vbm.estwrite.output.CSF = rmfield(matlabbatch{1}.spm.tools.vbm.estwrite.output.CSF,'mod');
-    matlabbatch{1}.spm.tools.vbm.estwrite.output.mgT = rmfield(matlabbatch{1}.spm.tools.vbm.estwrite.output.mgT,'mod');
+  end
+end
+
+tmp_fields = char('native','warped','mod','dartel');
+try
+  if writeonly
+    matlabbatch{1}.spm.tools.vbm.write.output.WMH = rmfield(matlabbatch{1}.spm.tools.vbm.write.output.WMH,tmp_fields);
+  else
+    matlabbatch{1}.spm.tools.vbm.estwrite.output.WMH = rmfield(matlabbatch{1}.spm.tools.vbm.estwrite.output.WMH,tmp_fields);
   end
 end
 
